# ClaudeCodeMCPIndexer

./: .gitignore  README.md  ROADMAP.md  chroma-heal-dry.txt  config.example.toml  pyproject.toml
scripts/: flash-detector.ps1  hide-all-user-tasks.ps1  install-autostart.ps1  install-dashboard-autostart.ps1  install-eval-cron.ps1  install-health-alerter-autostart.ps1  install-reaper-autostart.ps1  install-redeploy-autostart.ps1  install-watchdog-autostart.ps1  mine_eval_from_transcripts.py  profile_indexer.py  quantize_qwen3_fp8.py  restart-dashboard.ps1  resume_code_rag.ps1  serve-qwen3-embed-8b.sh  serve-rerank-bge-m3.sh  setup.ps1  setup.sh  uninstall-autostart.ps1  uninstall-dashboard-autostart.ps1  uninstall-eval-cron.ps1  uninstall-health-alerter-autostart.ps1  uninstall-reaper-autostart.ps1  uninstall-redeploy-autostart.ps1  uninstall-watchdog-autostart.ps1
scripts/hooks/: install.sh  pre-push.sh
src/code_rag/: __init__.py  autostart_bootstrap.py  chroma_defrag.py  chroma_watchdog.py  cli.py  config.py  dynamic_roots.py  factory.py  install.py  lms_ctl.py  logging.py  models.py  ops.py  roots_edit.py  version.py
src/code_rag/chunking/: docs.py  images.py  tag_queries.py  treesitter.py
src/code_rag/chunking/tag_queries_vendor/c_sharp/: tags.scm
src/code_rag/chunking/tag_queries_vendor/javascript/: tags.scm
src/code_rag/chunking/tag_queries_vendor/typescript/: tags.scm
src/code_rag/dashboard/: operations.py  projects.py  resource_budget.py  server.py
src/code_rag/dashboard/static/: app.js  index.html  style.css
src/code_rag/embedders/: __init__.py  code_specialized.py  fake.py  lm_studio.py  prompts.py  sentence_transformers.py
src/code_rag/eval/: harness.py  mine_transcripts.py  telemetry.py
src/code_rag/eval/fixtures/: manual_eval.json  mined_eval.json  mined_eval_clean.json  sample_eval.json
src/code_rag/graph/: extractor.py  ingest.py  scip.py
src/code_rag/indexing/: file_hash.py  git_log.py  indexer.py  summary.py  walker.py
src/code_rag/interfaces/: __init__.py  embedder.py  graph_store.py  lexical_store.py  reranker.py  vector_store.py
src/code_rag/mcp_server/: server.py
src/code_rag/rerankers/: cross_encoder.py  lm_chat.py  lm_studio.py  noop.py
src/code_rag/retrieval/: colbert.py  decompose.py  fusion.py  graph_augmented.py  hyde.py  query_classify.py  query_rewriter.py  reflection.py  search.py
src/code_rag/stores/: chroma_vector.py  kuzu_graph.py  sqlite_lexical.py
src/code_rag/util/: auto_stop_loop.py  auto_stop_marker.py  globs.py  hashing.py  headless_subprocess.py  health_alerter.py  lm_janitor.py  proc_hygiene.py  redeploy.py  stop_marker.py
src/code_rag/watcher/: live.py
tests/: test_chunker.py  test_indexer_pipeline.py  test_lm_janitor.py  test_mine_transcripts.py  test_p17_preset_wiring.py  test_phase10_install.py  test_phase11_autostart.py  test_phase12_dynamic_roots.py  test_phase14_file_hash.py  test_phase15_parallel.py  test_phase16_tag_queries.py  test_phase17_18_20_scaffolds.py  test_phase17_18_scaffolds.py  test_phase19_hyde.py  test_phase21_graph_augmented.py  test_phase22_git_log.py  test_phase23_ops.py  test_phase24_chat_reranker.py  test_phase25_dashboard.py  test_phase26_eval_gate.py  test_phase27_mmr.py  test_phase28_exact_boost.py  test_phase29_cross_encoder.py  test_phase2_hybrid.py  test_phase30_query_rewriter.py  test_phase31_file_summary.py  test_phase32_proc_hygiene.py  test_phase34_st_embedder.py  test_phase35_adversarial.py  test_phase35_diagnostics.py  test_phase35_drift_watchdog.py  test_phase35_freshness.py  test_phase36_self_healing.py  test_phase37_decompose.py  test_phase37_reflection.py  test_phase37_telemetry.py  test_phase37d_images.py  test_phase37i_drift.py  test_phase37j_health_alerter.py  test_phase37k_search_filters.py  (+29 more)
